--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ a,
 	text-decoration: none;
 	font-size: 18px;
 	color: #e5e7eb;
+	margin: 0;
 }
 
 a {
@@ -70,4 +71,41 @@ button {
 	padding: 7px 40px;
 	color: #F9FAF8;
 	font-weight: bold;
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.images {
+	display: flex;
+	gap: 40px;
+	margin-bottom: 80px;
+}
+
+.image {
+	display: flex;
+	flex-direction: column;
+	width: 200px;
+	text-align: center;
+}
+
+.info-image {
+	height: 200px;
+	border: solid #3882f6;
+	border-radius: 20px;
+}
+
+.img-sub {
+	font-size: 20px;
+	color: #454d5b;
+}
+
+.info-title {
+	font-size: 36px;
+	font-weight: bolder;
+	color: #1F2937;
+	margin-bottom: 50px;
 }
