--- a/style.css
+++ b/style.css
@@ -109,3 +109,23 @@ button {
 	color: #1F2937;
 	margin-bottom: 50px;
 }
+
+.quote {
+	background-color: #e5e7eb;
+	display: flex;
+	flex-direction: column;
+	padding: 80px 560px;
+}
+
+.quote-text {
+	font-size: 36px;
+	font-style: italic;
+	font-weight: 300;
+	color: #1F2937;
+}
+
+.quote-author {
+	font-weight: bold;
+	align-self: flex-end;
+	font-size: 20px;
+}
