--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ a {
 	margin-bottom: 0;
 }
 
-button {
+.hero-button {
 	background-color: #3882f6;
 	border: none;
 	border-radius: 8px;
@@ -114,10 +114,12 @@ button {
 	background-color: #e5e7eb;
 	display: flex;
 	flex-direction: column;
-	padding: 80px 560px;
+	padding: 80px;
+	align-items: center;
 }
 
 .quote-text {
+	width: 800px;
 	font-size: 36px;
 	font-style: italic;
 	font-weight: 300;
@@ -128,4 +130,39 @@ button {
 	font-weight: bold;
 	align-self: flex-end;
 	font-size: 20px;
+}
+
+.call-to-action {
+	display: flex;
+	margin: 80px 300px;
+	background-color: #3882f6;
+	align-items: center;
+	justify-content: space-around;
+	border-radius: 20px;
+	padding: 50px;
+}
+
+.call-text {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+
+.call-title {
+	color: #F9FAF8;
+	margin: 0;
+}
+
+.call-description {
+	color: #e5e7eb;
+	margin: 0;
+}
+
+.call-button {
+	padding: 3px 30px;
+	font-size: 18px;
+	border: #F9FAF8 solid;
+	border-radius: 10px;
+	background-color: #3882f6;
+	color: #F9FAF8;
 }
