--- a/style.css
+++ b/style.css
@@ -166,3 +166,10 @@ a {
 	background-color: #3882f6;
 	color: #F9FAF8;
 }
+
+.footer {
+	background-color: #1F2937;
+	color: #e5e7eb;
+	padding: 20px;
+	text-align: center;
+}
